# TFM

./: .gitignore  TFM.json  references.json  skills-lock.json
Polytechnic_University_of_Leiria_Thesis_Template/: IPLeiriaMain.acn  IPLeiriaMain.aux  IPLeiriaMain.bbl  IPLeiriaMain.bcf  IPLeiriaMain.fdb_latexmk  IPLeiriaMain.fls  IPLeiriaMain.glo  IPLeiriaMain.ist  IPLeiriaMain.lof  IPLeiriaMain.lot  IPLeiriaMain.out  IPLeiriaMain.run.xml  IPLeiriaMain.slo  IPLeiriaMain.tex  IPLeiriaMain.toc
Polytechnic_University_of_Leiria_Thesis_Template/Chapters/: 00-Abstract.aux  01-Introduction.aux  02-User-Guide.aux  03-Latex-Tutorial.aux
Polytechnic_University_of_Leiria_Thesis_Template/Configurations/: 01-Colors.sty
Polytechnic_University_of_Leiria_Thesis_Template/Matter/: 00-Cover.aux  01-Front-Page.aux  02-Copyright.aux  03-Acknowledgements.aux  04-AI.aux
Polytechnic_University_of_Leiria_Thesis_Template/_minted-IPLeiriaMain/: 76AEA41E4A042B6D823C16293C18A0C69282B20E06DFA852DF818E8C10A0F5B8.pygtex  CB4423B26C5D9BAD63B1DDD81F5ACF8B3A767C32B514E767AA6F4292161C7BC5.pygtex  E4D0965159964B389FFDAED9C17CA6FECBFD2B41A4E66BD2164641A413037132.pygtex
Tex/figures/: GLMHMM-3WM.tex  GLMHMM-t.tex  GLMHMM.tex
code/: check_data.py  choice_mlp_surrogate.pt  config.toml  glm-hmm.py  parsing copy.ipynb  parsing.ipynb  paths.py  plots.ipynb  pyproject.toml  requirements.clean.txt  requirements.txt  tutorial_simulation_based_inference.ipynb
code/glmhmmt/: features.py  model.py  plots.py  pyproject.toml  simulator_3WM_numba.py
code/glmhmmt/src/glmhmmt/: HOWTO.md  __init__.py  features.py  model.py  plots.py  plots_alexis.py  postprocess.py  simulator_3WM_numba.py  views.py
code/notebooks/: fit-MNLE.py  glm_analysis.py  glmhmm_analysis.py  glmhmmt_analysis.py  model_comparison.py  model_recovery.py  parse_alexis.py  parsing.ipynb  parsing.py  plots.py  simulation_based_inf.py  simulation_based_inf_test.py  simulation_based_inf_train.py  widget_toml.py  widgets.py
code/notebooks/__marimo__/session/: fit-MNLE.py.json  glm_analysis.py.json  glmhmm_analysis.py.json  model_comparison.py.json  model_recovery.py.json  parse_alexis.py.json  parsing.py.json  plots.py.json  pueba.py.json  simulation_based_inf.py.json  simulation_based_inf_test.py.json  simulation_based_inf_train.py.json  simulation_based_inf_train2.py.json  widget_toml.py.json
code/notebooks/model_manager/: __init__.py  widget.css  widget.js  widget.py
code/results/: choice_mlp_surrogate.pt
code/scripts/: alexis_functions.py  fit_glm.py  fit_glm_cat.py  fit_glmhmm.py  fit_glmhmmt.py  fit_tau_sweep.py  glm_hmm.py
code/tasks/: __init__.py  mcdr.py  two_afc.py
code/tfm_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: astro.config.mjs
frontend/src/content/docs/docs/: intro.md
frontend/src/content/docs/docs/api/: postprocess.md
frontend/src/content/docs/docs/guide/: quickstart.md
frontend/src/pages/: index.astro
toml-editor/: .gitignore
