[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py==2.4.0",
    "altair==6.0.0",
    "anyio==4.12.1",
    "anywidget==0.9.21",
    "appnope==0.1.4",
    "apsw==3.51.2.0",
    "apswutils==0.1.2",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arro3-core==0.6.5",
    "arviz==0.23.4",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "beautifulsoup4==4.14.3",
    "bleach==6.3.0",
    "blinker==1.9.0",
    "cachetools==7.0.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "choreographer==1.2.1",
    "click==8.3.1",
    "cloudpickle==3.1.2",
    "comm==0.2.3",
    "cons==0.4.7",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "dash==4.0.0",
    "dash-bootstrap-components==2.0.4",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "deepecohab==0.4.2.5",
    "defusedxml==0.7.1",
    "dm-tree==0.1.9",
    "docutils==0.22.4",
    "drawdata==0.5.0",
    "dynamax==1.0.1",
    "etuples==0.3.10",
    "executing==2.2.1",
    "fastcore==1.12.11",
    "fastjsonschema==2.21.2",
    "fastlite==0.2.4",
    "fastprogress==1.1.3",
    "flask==3.1.2",
    "fonttools==4.61.1",
    "gast==0.7.0",
    "glmhmmt",
    "gpyreg==1.0.2",
    "grpcio==1.78.0",
    "h11==0.16.0",
    "h5netcdf==1.8.1",
    "h5py==3.15.1",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "iniconfig==2.3.0",
    "ipykernel==7.2.0",
    "ipython==9.10.0",
    "ipython-genutils==0.2.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.8",
    "itsdangerous==2.2.0",
    "jax==0.9.0.1",
    "jaxlib==0.9.0.1",
    "jaxtyping==0.3.7",
    "jedi==0.19.2",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-widgets==3.0.16",
    "kaleido==1.2.0",
    "kiwisolver==1.4.9",
    "llvmlite==0.46.0",
    "logical-unification==0.4.7",
    "logistro==2.0.1",
    "loro==1.10.3",
    "marimo==0.19.11",
    "marimo-toml-editor==0.1.0",
    "markdown==3.10.1",
    "markdown-it-py==4.0.0",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "minikanren==1.0.5",
    "mistune==3.2.0",
    "ml-dtypes==0.5.4",
    "msgspec==0.20.0",
    "multipledispatch==1.0.0",
    "narwhals==2.16.0",
    "nbclient==0.10.4",
    "nbconvert==7.17.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "nflows==0.14",
    "notebook==6.4.12",
    "numba==0.63.1",
    "oauthlib==3.3.1",
    "openskill==6.2.0",
    "opt-einsum==3.4.0",
    "optax==0.2.7",
    "orjson==3.11.7",
    "pandas==3.0.0",
    "pandocfilters==1.5.1",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "pillow==12.1.0",
    "platformdirs==4.5.1",
    "plotly==6.5.2",
    "pluggy==1.6.0",
    "polars==1.38.1",
    "polars-runtime-32==1.38.1",
    "prometheus-client==0.24.1",
    "prompt-toolkit==3.0.52",
    "protobuf==6.33.5",
    "psutil==7.2.2",
    "psygnal==0.15.1",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==23.0.0",
    "pybads==1.0.6",
    "pycparser==3.0",
    "pydantic-ai>=0.2.4",
    "pygments==2.19.2",
    "pyknos==0.16.0",
    "pymc==5.27.1",
    "pymdown-extensions==10.20.1",
    "pyparsing==3.3.2",
    "pyro-api==0.1.2",
    "pyro-ppl==1.9.1",
    "pytensor==2.37.0",
    "pytest==9.0.2",
    "pytest-mock==3.15.1",
    "pytest-rerunfailures==16.1",
    "pytest-timeout==2.4.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-fasthtml==0.12.41",
    "python-multipart==0.0.22",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "requests==2.32.5",
    "retrying==1.4.2",
    "rich==14.3.2",
    "rpds-py==0.30.0",
    "ruff==0.15.1",
    "sbi==0.25.0",
    "seaborn==0.13.2",
    "send2trash==2.1.0",
    "simplejson==3.20.2",
    "six==1.17.0",
    "soupsieve==2.8.3",
    "stack-data==0.6.3",
    "starlette==0.52.1",
    "sympy==1.13.1",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow-probability==0.25.0",
    "terminado==0.18.1",
    "tfp-nightly==0.26.0.dev20260205",
    "tinycss2==1.4.0",
    "toml==0.10.2",
    "tomli-w==1.2.0",
    "tomlkit==0.14.0",
    "toolz==1.1.0",
    "torch==2.5.1",
    "tornado==6.5.4",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "tzlocal==5.3.1",
    "urllib3==2.6.3",
    "uvicorn==0.40.0",
    "uvloop==0.22.1",
    "vegafusion==2.0.3",
    "vl-convert-python==1.9.0.post1",
    "wadler-lindig==0.1.7",
    "watchfiles==1.1.1",
    "wcwidth==0.6.0",
    "webencodings==0.5.1",
    "websockets==16.0",
    "werkzeug==3.1.5",
    "widgetsnbextension==4.0.15",
    "wrapt==2.1.1",
    "xarray==2026.1.0",
    "xarray-einstats==0.9.1",
    "zipp==3.23.0",
    "zuko==1.5.0",
]

[tool.uv.workspace]
members = ["./glmhmmt"]

[tool.uv.sources]
glmhmmt = { workspace = true, editable = true }
